--- a/pom.xml
+++ b/pom.xml
@@ -233,6 +233,11 @@
 				<artifactId>lucene-highlighter</artifactId>
 				<version>4.10.2</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.lucene</groupId>
+				<artifactId>lucene-analyzers-smartcn</artifactId>
+				<version>4.10.2</version>
+			</dependency>
 
 			<dependency>
 				<groupId>net.sf.ehcache</groupId>
